kubia-ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia-ingress-2
spec:
  ingressClassName: nginx   
  tls:
    - hosts:
        - kubia.example.com
      secretName: tls-secret
  rules:
    - host: kubia.example.com
      http:
        paths:
          - path: /kubia
            pathType: Prefix
            backend:
              service:
                name: kubia-nodeport
                port:
                  number: 80
